# pkg/gorm-gen/model/todolists.gen.go
@@ -14,19 +14,20 @@ const TableNameTodolists = "todolists"
 
 // Todolists mapped from table <todolists>
 type Todolists struct {
-	ID        string         `gorm:"column:id;type:uuid;primaryKey;default:gen_random_uuid();comment:待办事项ID" json:"id"`                                                   // 待办事项ID
-	UserID    string         `gorm:"column:user_id;type:character varying(32);not null;comment:用户ID" json:"user_id"`                                                      // 用户ID
-	Title     string         `gorm:"column:title;type:character varying(255);not null;comment:待办事项标题" json:"title"`                                                       // 待办事项标题
-	Content   string         `gorm:"column:content;type:text;not null;comment:待办事项内容" json:"content"`                                                                     // 待办事项内容
-	StartTime time.Time      `gorm:"column:start_time;type:timestamp without time zone;not null;comment:待办事项开始时间" json:"start_time"`                                      // 待办事项开始时间
-	EndTime   time.Time      `gorm:"column:end_time;type:timestamp without time zone;not null;comment:待办事项结束时间" json:"end_time"`                                          // 待办事项结束时间
-	IsAllDay  int16          `gorm:"column:is_all_day;type:smallint;not null;comment:是否为全天事项，0-否，1-是" json:"is_all_day"`                                                  // 是否为全天事项，0-否，1-是
-	Status    int16          `gorm:"column:status;type:smallint;not null;comment:待办事项状态，0-未完成，1-已完成" json:"status"`                                                       // 待办事项状态，0-未完成，1-已完成
-	RemindAt  *time.Time     `gorm:"column:remind_at;type:timestamp without time zone;comment:待办事项提醒时间" json:"remind_at"`                                                 // 待办事项提醒时间
-	Tag       *string        `gorm:"column:tag;type:character varying(64);comment:待办事项标签" json:"tag"`                                                                     // 待办事项标签
-	CreatedAt time.Time      `gorm:"column:created_at;type:timestamp without time zone;not null;default:now();autoCreateTime;comment:创建时间" json:"created_at"`             // 创建时间
-	UpdatedAt time.Time      `gorm:"column:updated_at;type:timestamp(6) with time zone;not null;default:CURRENT_TIMESTAMP;autoUpdateTime;comment:更新时间" json:"updated_at"` // 更新时间
-	DeletedAt gorm.DeletedAt `gorm:"column:deleted_at;type:timestamp without time zone;comment:删除时间" json:"deleted_at"`                                                   // 删除时间
+	ID        string         `gorm:"column:id;type:uuid;primaryKey;default:gen_random_uuid();comment:待办事项ID" json:"id"`                             // 待办事项ID
+	UserID    string         `gorm:"column:user_id;type:character varying(32);not null;comment:用户ID" json:"user_id"`                                // 用户ID
+	Title     string         `gorm:"column:title;type:character varying(255);not null;comment:待办事项标题" json:"title"`                                 // 待办事项标题
+	Content   string         `gorm:"column:content;type:text;not null;comment:待办事项内容" json:"content"`                                               // 待办事项内容
+	StartTime time.Time      `gorm:"column:start_time;type:timestamp without time zone;not null;comment:待办事项开始时间" json:"start_time"`                // 待办事项开始时间
+	EndTime   time.Time      `gorm:"column:end_time;type:timestamp without time zone;not null;comment:待办事项结束时间" json:"end_time"`                    // 待办事项结束时间
+	IsAllDay  int16          `gorm:"column:is_all_day;type:smallint;not null;comment:是否为全天事项，0-否，1-是" json:"is_all_day"`                            // 是否为全天事项，0-否，1-是
+	Status    int16          `gorm:"column:status;type:smallint;not null;comment:待办事项状态，0-未完成，1-已完成" json:"status"`                                 // 待办事项状态，0-未完成，1-已完成
+	Priority  int16          `gorm:"column:priority;type:smallint;not null;default:1;comment:优先级，1-紧急且重要，2-重要不紧急，3-紧急不重要，4-不重要不紧急" json:"priority"` // 优先级，1-紧急且重要，2-重要不紧急，3-紧急不重要，4-不重要不紧急
+	RemindAt  *time.Time     `gorm:"column:remind_at;type:timestamp without time zone;comment:待办事项提醒时间" json:"remind_at"`                           // 待办事项提醒时间
+	Category  *string        `gorm:"column:category;type:character varying(64);comment:待办事项标签" json:"category"`                                     // 待办事项标签
+	CreatedAt time.Time      `gorm:"column:created_at;type:timestamp without time zone;not null;default:now();autoCreateTime" json:"created_at"`
+	UpdatedAt time.Time      `gorm:"column:updated_at;type:timestamp(6) with time zone;not null;default:CURRENT_TIMESTAMP;autoUpdateTime" json:"updated_at"`
+	DeletedAt gorm.DeletedAt `gorm:"column:deleted_at;type:timestamp without time zone" json:"deleted_at"`
 }
 
 // TableName Todolists's table name
